needed 2 points for correct box expansion SERVER-2832

Cannot start box expansion with min=max unless exact start point is in index.